# lab-codes

./: Example_input.txt  InstrumentProcessing.ipynb  MER_MEO_Eval_003.m  README.md  constants.py  lab_toolbox.py  pyproject.toml
.github/workflows/: pytest.yml
lab_toolbox/: __init__.py  constants.py  lab_toolbox.py
tests/: conftest.py  test_import.py  test_integration.py
tests/resources/: Example_input_6col.txt  matlab_baseline_filtered.csv  matlab_integral_output.csv
