[tool.poetry]
name = "lab_toolbox"
version = "0.1.0"
description = "A set of tools to assist with laboratory processes in labSOIL"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"
packages = [{include = "lab_toolbox"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
numpy = "^1.24.3"
peakutils = "^1.3.4"
kaleido = "0.2.1"
jupyterlab = "^4.0.0"
pybaselines = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pydantic = "^1.10.7"
pytest = "^7.3.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
